# MPMCMQ

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/MPMCMQ/: GenericQueue.h  Producer-Consumer-Example.h  QueueManager.h
src/: GenericQueue.cpp  Producer-Consumer-Example.cpp  QueueManager.cpp
